banner can changes product

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     <img src="./assets/burger1.png" alt="Sweet 'N Sour Burger">
                     <img src="./assets/burger2.png" alt="Sweet 'N Sour Burger">
                     <h1>Sweet 'N Sour</h1>
+                    <span><</span>
+                    <span>></span>
                 </div>
             </div>
         </div>
